# SapphireCodeGen

./: .gitignore  CMakeLists.txt  README.md
src/: FileGenerationTools.h  SapphireCodeGen.cpp  SigDatabase.cpp  SigDatabase.h
src/codegen/: ASTParser.cpp  ASTParser.h  Application.cpp  Application.h  CommandLine.cpp  CommandLine.h  FileProcessor.cpp  FileProcessor.h  HeaderGenerator.cpp  HeaderGenerator.h  PCHGenerator.cpp  PCHGenerator.h  SigDatabase.cpp  SigDatabase.h  SignatureGenerator.cpp  SignatureGenerator.h
src/util/: StringUtil.h
test/: Test.h
